$ -> Language fix or change
+ -> Addition
^^ -> Change
- -> Removed
! -> Note


22-Jan-2012 Christophe Demko
 # [#27810] *Strict error when creating/editing a Content Language

22-Jan-2012 Jean-Marie Simonet
 $ Updating installation ini files ur-PK, cs-CZ. Adding ml-IN installation
 # [#27808] float of full article image is not affected at all. Thanks Ofer
 # Correcting encoding ml-IN.xml
 
21-Jan-2012 Jean-Marie Simonet
 $ Updating installation ini files tr-TR, ur-PK
 # [#27557] Code style fix and Hathor CSS fixes to Extensions/Installer. Thanks Andrea.
 # [#27793] Notice errors in Hathor article edit. Thanks Andrea.
 $ [#27787] Installation Folder not directory. Thanks Brian. (English consistency ONLY)
 $ Updating installation ini file eu-ES, pt-BR
 $ Deleting installation ini file ka-GE
 $ Updating installation ini file sk-SK
 # [#27804] *Syntax error in templates.php. Thanks Monika
 $ [#27564] Capitalisation of extension names in language files. (English ONLY)

21-Jan-2012 Christophe Demko
 # [#27798] Tracker #27896 messed up CSS in Hathor control panel (Andrea Tarr)
 # [#27799] Php errors in smart search content map tab in Hathor (Andrea Tarr)
 # [#27766] ACL Issues when user has edit (but not create) permission in specific categories. (Elin Waring)
 # [#27795] Strict standards: Declaration of LanguagesModelLanguage::delete() should be compatible with that of JModelAdmin::delete()
 # [#27761] No parent categories showing in one scenario (Elin Waring)

20-Jan-2012 Christophe Demko
 # [#27790] *Error on uninstalling language pack since 2.5beta

20-Jan-2012 Mark Dexter
 # [#27778] JFormField uses get_called_class method that is not compatible with PHP 5.2.4
 # [#27786] Unescaped code in com_content
 # [#27783] *JLanguage: Avoid BOM error when debug, as BOM is OK when using parse_ini
 # [#27785] Internationalization support for Joomla on SQLAzure is breaking.
 # [#27606] Code cleaning for user notes

20-Jan-2012 Jean-Marie Simonet