@@ -123,17 +123,14 @@ $canEdit	= $this->item->params->get('access-edit');
 <?php endif; ?>
 
 <?php  if (isset($images->image_intro) and !empty($images->image_intro)) : ?>
-	<div class="img-intro-<?php echo $images->float_intro ?>">
+	<?php $imgfloat = (empty($images->float_intro)) ? $params->get('float_intro') : $images->float_intro; ?>
+
+	<div class="img-intro-<?php echo htmlspecialchars($imgfloat); ?>">
 	<img
 		<?php if ($images->image_intro_caption):
-			echo 'class="caption"'.' title="' .$images->image_intro_caption .'"';
+			echo 'class="caption"'.' title="' .htmlspecialchars($images->image_intro_caption) .'"';
 		endif; ?>
-	<?php if (empty($images->float_intro)):?>
-		style="float:<?php echo  $params->get('float_intro') ?>"
-	<?php else: ?>
-		style="float:<?php echo  $images->float_intro ?>"
-	<?php endif; ?>
-		src="<?php echo $images->image_intro; ?>" alt="<?php echo $images->image_intro_alt; ?>"/>
+		src="<?php echo htmlspecialchars($images->image_intro); ?>" alt="<?php echo htmlspecialchars($images->image_intro_alt); ?>"/>
 	</div>
 <?php endif; ?>
 
